--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
   justify-content: center;
   margin-top: 5rem;
 }
+.center {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 input {
   display: block;
   width: 20rem;
