--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,14 @@
 .AppLeft {
   display: flex;
   justify-content: left;
-  margin-top: 1rem;
+  margin: 2rem;
+  padding: 2rem;
 }
 .addProduct {
   display: flex;
   justify-content: center;
   margin: 3rem;
+  /* padding: 2rem; */
 }
 .MuiToggleButton-root {
     color: #5a0303;
